--- a/private_dot_tmux.conf
+++ b/private_dot_tmux.conf
@@ -1,6 +1,4 @@
-# Add truecolor support
-set -g default-terminal "xterm-kitty"
-set-option -sa terminal-overrides ',xterm-kitty:RGB'
+set -g default-terminal "tmux-256color"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
