--- a/private_dot_tmux.conf
+++ b/private_dot_tmux.conf
@@ -33,5 +33,9 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe 'xclip -in -select
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+# Set first index to 1
+set -g base-index 1
+setw -g pane-base-index 1
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
