--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -53,17 +53,11 @@ bindsym $mod+Shift+Return exec alacritty
 # kill focused window
 bindsym $mod+Shift+q kill
 
-bindsym $mod+Shift+t exec "echo firefox | dmenu | /usr/bin/fish &"
-
-# start dmenu (a program launcher)
-bindsym $mod+d exec "dmenu_run -nf '#FFFFFF' -nb '#301878' -sb '#F06078' -sf '#FFFFFF' -fn 'monospace-10' -p 'dmenu prompt'"
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+# app launcher
+bindsym $mod+d exec "rofi -combi-modi window,drun -show combi -modi combi"
 
 # region screenshot to clipboard
-bindsym $mod+shift+s exec "maim -s | xclip -selection clipboard -t image/png"
+bindsym $mod+shift+s exec "flameshot gui"
 
 # change focus
 bindsym $mod+h focus left
@@ -224,6 +218,7 @@ exec --no-startup-id xcape -e 'Caps_Lock=Escape'
 exec --no-startup-id unclutter
 exec --no-startup-id dunst
 exec --no-startup-id picom
+exec --no-startup-id kdeconnect-indicator
 exec_always --no-startup-id feh --bg-scale ~/.config/wallpaper.jpg
 exec_always --no-startup-id xset r rate 250 55
 exec_always --no-startup-id autorandr --load horizontal
