--- a/private_dot_tmux.conf
+++ b/private_dot_tmux.conf
@@ -5,6 +5,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 set -g status-position bottom
 set -g status-left ''
@@ -24,10 +26,10 @@ set -g mouse on
 
 # Set vi-style bindings and fix clipboard
 set-window-option -g mode-keys vi
-set -g set-clipboard off
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard'
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe 'xclip -in -selection clipboard'
+# set -g set-clipboard off
+# bind-key -T copy-mode-vi 'v' send -X begin-selection
+# bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard'
+# bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe 'xclip -in -selection clipboard'
 
 # Split panes easily
 bind | split-window -h -c "#{pane_current_path}"
