--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,4 +1,6 @@
 include ./theme.conf
 
+clipboard_control write-clipboard write-primary no-append
+
 font_family Operator Mono Nerd Font
 font_size 13.0
