--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -216,8 +216,7 @@ client.background       $bg
 
 
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
-exec --no-startup-id wal -R
-exec --no-startup-id ~/.config/i3/scripts/bingpaper.py
+exec --no-startup-id wal -R && ~/.config/i3/scripts/bingpaper.py
 exec --no-startup-id xcape -e 'Caps_Lock=Escape'
 exec --no-startup-id unclutter
 exec --no-startup-id dunst
