--- a/private_dot_tmux.conf
+++ b/private_dot_tmux.conf
@@ -21,6 +21,8 @@ set-option -g history-limit 5000
 unbind C-b
 set -g prefix `
 
+set -sg escape-time 0
+
 # Make mouse useful in copy mode
 set -g mouse on
 
