--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -215,7 +215,7 @@ client.placeholder      $bg     $bg     $fg  $bg       $bg
 client.background       $bg
 
 
-exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
+exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id polybar main
 exec --no-startup-id xcape -e 'Caps_Lock=Escape'
 exec --no-startup-id unclutter
