--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -213,12 +213,15 @@ bar {
   status_command env SCRIPT_DIR=/home/antonio/.config/i3blocks i3blocks
 }
 
-exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec --no-startup-id xcape -e 'Caps_Lock=Escape'
 exec --no-startup-id unclutter
 exec --no-startup-id dunst
 exec --no-startup-id picom
 exec --no-startup-id kdeconnect-indicator
 exec --no-startup-id wal -R && ~/.config/i3/scripts/bingpaper.py
+exec --no-startup-id kdeconnect-indicator
+exec --no-startup-id wal -R && ~/.config/i3/scripts/bingpaper.py
+exec --no-startup-id flameshot
 exec_always --no-startup-id xset r rate 250 55
 exec_always --no-startup-id autorandr --load horizontal
