--- a/private_dot_tmux.conf
+++ b/private_dot_tmux.conf
@@ -28,6 +28,9 @@ set -g mouse on
 
 # Set vi-style bindings and fix clipboard
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 # set -g set-clipboard off
 # bind-key -T copy-mode-vi 'v' send -X begin-selection
 # bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard'
