Update dot_config/private_Code - OSS/User/settings.json

--- a/dot_config/private_Code - OSS/User/settings.json
+++ b/dot_config/private_Code - OSS/User/settings.json
@@ -4,6 +4,9 @@
         "enabled": true,
         "delay": 500
     },
+    "go.alternateTools": {
+        "go": "/usr/lib/go/bin/go"
+    },
     "editor.formatOnSave": true,
     "editor.fontFamily": "OperatorMono Nerd Font",
     "window.zoomLevel": -0.25,
