Update dot_config/private_Code - OSS/User/settings.json

--- a/dot_config/private_Code - OSS/User/settings.json
+++ b/dot_config/private_Code - OSS/User/settings.json
@@ -16,6 +16,32 @@
     "git.autofetch": true,
     "vim.highlightedyank.enable": true,
     "vim.useSystemClipboard": true,
+    "vim.normalModeKeyBindingsNonRecursive": [
+        {
+            "before": [
+                "u"
+            ],
+            "after": [],
+            "commands": [
+                {
+                    "command": "undo",
+                    "args": []
+                }
+            ]
+        },
+        {
+            "before": [
+                "<C-r>"
+            ],
+            "after": [],
+            "commands": [
+                {
+                    "command": "redo",
+                    "args": []
+                }
+            ]
+        }
+    ],
     "gitlens.codeLens.authors.enabled": false,
     "gitlens.codeLens.recentChange.enabled": false,
     "editor.lineNumbers": "relative",
