Update dot_config/private_Code - OSS/User/settings.json

--- a/dot_config/private_Code - OSS/User/settings.json
+++ b/dot_config/private_Code - OSS/User/settings.json
@@ -46,4 +46,5 @@
     "gitlens.codeLens.recentChange.enabled": false,
     "editor.lineNumbers": "relative",
     "cSpell.language": "it,en",
+    "cSpell.enabled": false,
 }
