updates from tp

--- a/dot_config/kitty/kitty-themes/themes/snazzy.conf
+++ b/dot_config/kitty/kitty-themes/themes/snazzy.conf
@@ -7,6 +7,7 @@
 
 foreground            #eff0eb
 background            #282a36
+background_opacity    0.9
 selection_foreground  #000000
 selection_background  #FFFACD
 url_color             #0087BD
