--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -19,10 +19,10 @@ set $mod Mod4
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 font pango:DejaVu Sans Mono 8
 
-exec --no-startup-id xss-lock -- ~/.config/i3/lock.sh
+exec --no-startup-id xss-lock -- ~/.config/i3/scripts/lock.sh
 
 # lock screen
-bindsym $mod+Shift+x exec ~/.config/i3/lock.sh
+bindsym $mod+Shift+x exec ~/.config/i3/scripts/lock.sh
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3blocks pkill -SIGRTMIN+10 i3blocks
@@ -224,8 +224,9 @@ exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec --no-startup-id xcape -e 'Caps_Lock=Escape'
 exec --no-startup-id unclutter
 exec --no-startup-id dunst
-exec --no-startup-id picom
+exec --no-startup-id picom --experimental-backends
 exec --no-startup-id kdeconnect-indicator
-exec --no-startup-id wal -R && ~/.config/i3/scripts/bingpaper.py
+exec --no-startup-id wal -R && ~/.config/i3/scripts/bingpaper.py && ~/.config/autorandr/postswitch
 exec --no-startup-id flameshot
+exec --no-startup-id /usr/local/bin/QNAP/QsyncClient/Qsync.sh
 exec_always --no-startup-id xset r rate 250 55
