--- a/dot_config/picom/picom.conf
+++ b/dot_config/picom/picom.conf
@@ -55,7 +55,7 @@ glx-copy-from-front = false;
 #################################
 
 # Enabled client-side shadows on windows.
-shadow = false;
+shadow = true;
 # The blur radius for shadows. (default 12)
 shadow-radius = 5;
 # The left offset for shadows. (default -15)
@@ -111,19 +111,25 @@ frame-opacity = 1;
 inactive-opacity-override = false;
 
 # Dim inactive windows. (0.0 - 1.0)
-# inactive-dim = 0.2;
+inactive-dim = 0.05;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-# blur-background = true;
+blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
-# blur-background-frame = true;
+blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = false;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'"
 ];
+
+blur: {
+  method = "gaussian";
+  size = 10;
+  deviation = 5.0;
+};
 
 #################################
 #
@@ -132,9 +138,9 @@ blur-background-exclude = [
 #################################
 
 # Fade windows during opacity changes.
-fading = false;
+fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 4;
+fade-delta = 2;
 # Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.03;
 # Opacity change between steps while fading out. (default 0.03).
